--- a/service/webui/webui/package.json
+++ b/service/webui/webui/package.json
@@ -2,10 +2,13 @@
   "dependencies": {
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "material-table": "^1.56.1",
+    "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "swr": "^0.1.16"
   },
   "scripts": {
     "start": "react-scripts start",
