service: webui: Add homepage to package.json
Signed-off-by: John Andersen <johnandersenpdx@gmail.com>

--- a/service/webui/webui/package.json
+++ b/service/webui/webui/package.json
@@ -30,5 +30,6 @@
   },
   "devDependencies": {
     "miragejs": "^0.1.33"
-  }
+  },
+  "homepage" : "https://intel.github.io/dffml/master/webui"
 }
